<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_stock"
            android:title="@string/my_stock" />
        <item
            android:id="@+id/nav_stock_for_sale"
            android:title="@string/stock_for_sale" />
        <item
            android:id="@+id/nav_add_item"
            android:title="@string/add_item" />
        <item
            android:id="@+id/nav_search_other_stock"
            android:title="@string/search_other_stock" />
        <item
            android:id="@+id/nav_my_sales"
            android:title="@string/my_sales" />
        <item
            android:id="@+id/nav_my_rating"
            android:title="@string/my_rating" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
